--- a/.gitattributes
+++ b/.gitattributes
@@ -9,5 +9,5 @@
 *.pcbdoc linguist-detectable
 *.schdoc linguist-language=SchDoc
 *.pcbdoc linguist-language=PcbDoc
-*.htm linguist-language=PcbDoc
+*.htm linguist-language=c
 *.GML linguist-language=PcbDoc
